<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Labela za Šifra -->
    <TextView
        android:id="@+id/labelSifra1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sifra1_label"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Prikaz skenirane šifre (needitabilno polje) -->
    <TextView
        android:id="@+id/labelSkeniranaSifra"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:hint="@string/sifra1_hint"
        android:textSize="16sp"
        android:maxLength="20"
        android:background="@drawable/non_editable_background"
        app:layout_constraintStart_toEndOf="@id/labelSifra1"
        app:layout_constraintTop_toTopOf="@id/labelSifra1"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="-14dp" />

    <!-- Labela za Kod 1 -->
    <TextView
        android:id="@+id/labelKod1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kod1_label"
        android:textSize="16sp"
        android:layout_marginStart="8dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/editTextKod1"
        app:layout_constraintBottom_toBottomOf="@id/editTextKod1" />

    <!-- Polje za Kod 1 -->
    <EditText
        android:id="@+id/editTextKod1"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/kod1_hint"
        android:textSize="16sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:paddingStart="8dp"
        android:paddingEnd="16dp"
        android:inputType="textCapCharacters|text"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
        android:maxLength="2"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:background="@drawable/edittext_border"
        app:layout_constraintStart_toEndOf="@id/labelKod1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelSkeniranaSifra"
        android:layout_marginTop="14dp" />

    <!-- Labela za Kod 2 -->
    <TextView
        android:id="@+id/labelKod2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kod2_label"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/editTextKod2"
        app:layout_constraintBottom_toBottomOf="@id/editTextKod2" />

    <!-- Polje za Kod 2 -->
    <EditText
        android:id="@+id/editTextKod2"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/kod2_hint"
        android:textSize="16sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:inputType="textCapCharacters|text"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
        android:maxLength="2"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:background="@drawable/edittext_border"
        app:layout_constraintStart_toEndOf="@id/labelKod2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextKod1"
        android:layout_marginTop="14dp" />

    <!-- Labela za Kod 3 -->
    <TextView
        android:id="@+id/labelKod3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kod3_label"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/editTextKod3"
        app:layout_constraintBottom_toBottomOf="@id/editTextKod3" />

    <!-- Polje za Kod 3 -->
    <EditText
        android:id="@+id/editTextKod3"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/kod3_hint"
        android:textSize="16sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:inputType="textCapCharacters|text"
        android:digits="0123456789"
        android:maxLength="2"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:background="@drawable/edittext_border"
        app:layout_constraintStart_toEndOf="@id/labelKod3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextKod2"
        android:layout_marginTop="14dp" />

    <!-- Gumb za brisanje i spremanje -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonClearAndSave"
        style="@style/CustomButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_clear_and_save"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="44dp"
        app:layout_constraintTop_toBottomOf="@id/editTextKod3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/recordCountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/buttonClearAndSave"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Include your main activity views here -->
</androidx.constraintlayout.widget.ConstraintLayout>
